--- a/_posts/2024-02-23-memes.md
+++ b/_posts/2024-02-23-memes.md
@@ -32,7 +32,7 @@ const authOptions = {
             method: 'PUT', // Override the method property
             cache: 'no-cache', // Set the cache property
             body: JSON.stringify(body)
-        };D
+        };
 
     // Function to fetch a random image from the backend API
     function generateRandomImage() {
@@ -46,7 +46,7 @@ const authOptions = {
             .then(data => {
                 const randomIndex = Math.floor(Math.random() * data.length);
                 const randomImage = document.getElementById('meme');
-                randomImage.src = data[randomIndex].url;
+                randomImage.src = data[1].url;
             })
             .catch(error => console.error('Error fetching random image:', error));
     }
