--- a/_posts/2024-02-23-memes.md
+++ b/_posts/2024-02-23-memes.md
@@ -19,19 +19,18 @@
 <div id="recommendation"></div>
 
 <script>
-    const apiUrl = 'http://127.0.0.1:8082/api/memes/meme';
+    const apiUrl = 'http://127.0.0.1:8082/api/memes/';
  const body = {
             meme: meme
         };
 const authOptions = {
             mode: 'cors', // no-cors, *cors, same-origin
-            credentials: 'same-origin', // include, same-origin, omit
+            credentials: 'include', // include, same-origin, omit
             headers: {
                 'Content-Type': 'application/json',
             },
-            method: 'PUT', // Override the method property
-            cache: 'no-cache', // Set the cache property
-            body: JSON.stringify(body)
+            method: 'GET', // Override the method property
+            cache: 'no-cache' // Set the cache property
         };
 
     // Function to fetch a random image from the backend API
@@ -41,12 +40,13 @@ const authOptions = {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
-                return response.json();
+                return response.blob();
             })
-            .then(data => {
-                const randomIndex = Math.floor(Math.random() * data.length);
-                const randomImage = document.getElementById('meme');
-                randomImage.src = data[1].url;
+            .then(blob => {
+                //const randomIndex = Math.floor(Math.random() * data.length);
+                const Image = document.getElementById("meme") 
+                const randomImageUrl = URL.createObjectURL(blob);
+                Image.src = randomImageUrl;
             })
             .catch(error => console.error('Error fetching random image:', error));
     }
@@ -62,8 +62,7 @@ const authOptions = {
 
         // Send POST request to upload image to the database
         fetch(apiUrl, { 
-            method: 'POST',
-            body: formData
+             body: formData
         })
         .then(response => {
             if (response.ok) {
