--- a/_posts/2024-02-23-memes.md
+++ b/_posts/2024-02-23-memes.md
@@ -100,6 +100,7 @@ const authOptions = {
 
         // Send POST request to upload image to the database
         fetch(apiUrl, { 
+             method : 'POST',
              body: formData
         })
         .then(response => {
